--- a/static/index.html
+++ b/static/index.html
@@ -405,7 +405,7 @@ Happy Writing!</pre>
 
                             globalState["sprint_start_time"] = -1;
                             globalState["sprint_history"] = [];
-                            globalState["sprint_display_size"] = "single";
+                            globalState["sprint_display_type"] = "single";
                             function getDisplay(state) {
                                 if(state !== null && state != undefined && state["sprint_start_time"] >= 0 && (state["sprint_duration"] + state["sprint_start_time"] > getTime())) {
                                     var timeToGo = state["sprint_duration"] + state["sprint_start_time"] - getTime();
@@ -444,14 +444,14 @@ Happy Writing!</pre>
                             function updateSprintHistory(state){
                                 var sprintHistoryP = document.getElementById("sprint_history_p");
                                 sprintHistoryP.innerHTML = "<i>Sprint history</i>:";
-                                if(state["sprint_display_size"] == "csv") {
+                                if(state["sprint_display_type"] == "csv") {
                                     sprintHistoryP.innerHTML += "<br>" + generateCSVFromJSONArray(state["sprint_history"], "<br>");
                                     sprintHistoryP.innerHTML += "<br>" + "<a href='data:text/plain;charset=utf-8," + escape(generateCSVFromJSONArray(state["sprint_history"], "\r\n")) +"' target=\"_blank\" download=\"sprintHistory.csv\">Download sprint history!!</a>";
                                     return;
                                 }
                                 var sprintDisplayMin = 0;
                                 var sprintDisplayMax = state["sprint_history"].length;
-                                if(state["sprint_display_size"] == "single" && sprintDisplayMax > 1) {
+                                if(state["sprint_display_type"] == "single" && sprintDisplayMax > 1) {
                                     sprintDisplayMin = sprintDisplayMax - 1;
                                 }
                                 for(var i=sprintDisplayMin; i<sprintDisplayMax; i++) {
@@ -460,8 +460,8 @@ Happy Writing!</pre>
                             }
                             function cycleSprintHistory() {
                                 var sprintHistoryP = document.getElementById("sprint_history_p");
-                                var sprintDisplaySize = globalState["sprint_display_size"];
-                                switch(globalState["sprint_display_size"]) {
+                                var sprintDisplaySize = globalState["sprint_display_type"];
+                                switch(globalState["sprint_display_type"]) {
                                     case "none":
                                         sprintDisplaySize = "all";
                                         break;
@@ -478,10 +478,10 @@ Happy Writing!</pre>
                                         sprintDisplaySize = "none";
                                         break;
                                 }
-                                globalState["sprint_display_size"] = sprintDisplaySize;
+                                globalState["sprint_display_type"] = sprintDisplaySize;
                                 updateSprintHistory(globalState);
 
-                                if(globalState["sprint_display_size"] == "none") {
+                                if(globalState["sprint_display_type"] == "none") {
                                     sprintHistoryP.style.display = "none";
                                 } else {
                                     sprintHistoryP.style.display = "block";
@@ -517,7 +517,7 @@ Happy Writing!</pre>
                                 newState["sprint_start_time"] = oldState["sprint_start_time"];
                                 newState["sprint_duration"] = oldState["sprint_duration"];
                                 newState["sprint_history"] = oldState["sprint_history"];
-                                newState["sprint_display_size"] = oldState["sprint_display_size"];
+                                newState["sprint_display_type"] = oldState["sprint_display_type"];
                                 if(oldState["sprint_start_time"] > 0) {
                                     if(oldState["sprint_duration"] + oldState["sprint_start_time"] <= getTime()) {
                                         newState["sprint_start_time"] = -1;
