made the font sizes medium across the bord.

--- a/static/index.html
+++ b/static/index.html
@@ -245,7 +245,7 @@ Happy Writing!</pre>
                             notes.id = "notes";
                             notes.rows = "10";
                             notes.cols = "50";
-                            notes.style.fontSize = "14px";
+                            notes.style.fontSize = "medium";
                             var heading = document.createElement("p");
                             heading.innerHTML = "<i>Notes</i>:";
 
@@ -283,7 +283,7 @@ Happy Writing!</pre>
                             tunnel.id = "text_box";
                             tunnel.rows = "10";
                             tunnel.cols = "50";
-                            tunnel.style.fontSize = "14px";
+                            tunnel.style.fontSize = "medium";
 
                             element.appendChild(heading);
                             element.appendChild(tunnel);
