--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <meta charset="utf-8">
+    <head>
+        <title>Tunnel Vision</title>
+    </head>
     <body>
         <hr>
         <p style="text-align:center;"><i>I do not like work even when someone else does it.</i> -- Mark Twain</p>
